<resources>
    <string name="app_name" translatable="false">News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welecome in News App</string>
    <string name="searchhint">Search</string>
    <string name="nav_open" translatable="false">Open</string>
    <string name="nav_close" translatable="false">Close</string>
    <string name="settings">Settings</string>
    <string name="categories">Categories</string>
    <string name="searchBtn">Search</string>
    <string name="search">Search</string>
    <string name="sports">Sports</string>
    <string name="business">Business</string>
    <string name="science">Science</string>
    <string name="technology">Technology</string>
    <string name="searchMessage">Enter your qustion</string>
    <string name="search_result">no results available</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="language">Language</string>
    <string name="mode">Mode</string>
    <string name="welcome2">Welcome ^^</string>
</resources>