<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ui.SettingsFragment"
    style="@style/Theme.News"
    android:id="@+id/setting_fr"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            android:background="@drawable/sports_toobar"
            android:gravity="center"
            android:textAlignment="center"
            android:theme="?actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">
        </androidx.appcompat.widget.Toolbar>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="@dimen/_20sdp"
            android:layout_gravity="center"
            style="@style/titleColor"
            android:textStyle="bold">
        </TextView>
    </FrameLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/_20sdp"
    android:gravity="center_horizontal"
    style="@style/Theme.News"
    android:orientation="vertical">
    <TextView
        android:id="@+id/language"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/language"
        style="@style/Theme.News"
        android:textStyle="bold" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        app:strokeWidth="1dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="10dp"
        app:cardPreventCornerOverlap="true"
        style="@style/Theme.News"
        app:cardCornerRadius="4dp">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/languageSpinner"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            style="@style/Theme.News"
            android:padding="@dimen/_7sdp"
            />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/Mode"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/mode"
        android:layout_marginBottom="@dimen/_5sdp"
        style="@style/Theme.News"
        android:textStyle="bold" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        app:strokeWidth="1dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="10dp"
        app:cardPreventCornerOverlap="true"
        style="@style/Theme.News"
        app:cardCornerRadius="4dp">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/modeSpinner"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:padding="7dp"
            />

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>
</LinearLayout>