<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.ui.HomeFragment">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            android:background="@drawable/sports_toobar"
            android:gravity="center"
            android:textAlignment="center"
            android:theme="?actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">
        </androidx.appcompat.widget.Toolbar>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categories"
                    android:textSize="@dimen/_20sdp"
                    android:layout_gravity="center"
                    style="@style/titleColor"
                    android:textStyle="bold">
                </TextView>
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:orientation="vertical"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    style="@style/LeftSide"
                    app:cardElevation="10dp"
                    app:cardMaxElevation="10dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="#2E7D32"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:weightSum="4"
                            android:gravity="center"
                            android:orientation="vertical">
                                <ImageView
                                    android:id="@+id/sports"
                                    android:layout_weight="4"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="@dimen/_23sdp"
                                    android:scaleType="centerCrop"
                                    android:src="@drawable/sports_icon" />
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0.5"
                                    android:text="@string/sports"
                                    android:gravity="center"
                                    android:textStyle="bold"
                                    android:textSize="@dimen/_15sdp">
                                </TextView>
                        </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    style="@style/RigtSide"
                    app:cardBackgroundColor="#0277BD"
                    app:cardElevation="10dp"
                    app:cardMaxElevation="10dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:weightSum="4"
                            android:gravity="center"
                            android:orientation="vertical">
                                <ImageView
                                    android:id="@+id/technology"
                                    android:layout_weight="4"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="@dimen/_20sdp"
                                    android:scaleType="centerCrop"
                                    android:src="@drawable/tec_icon" />
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0.5"
                                    android:text="@string/technology"
                                    android:gravity="center"
                                    android:textStyle="bold"
                                    android:textSize="@dimen/_15sdp">
                                </TextView>
                        </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center"
            android:orientation="horizontal">
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    style="@style/LeftSide"
                    app:cardElevation="10dp"
                    app:cardMaxElevation="10dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="#7E2EAF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:weightSum="4"
                            android:gravity="center"
                            android:orientation="vertical">
                                <ImageView
                                    android:id="@+id/science"
                                    android:layout_weight="4"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="@dimen/_20sdp"
                                    android:scaleType="centerCrop"
                                    android:src="@drawable/scin_icon" />
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0.5"
                                    android:text="@string/science"
                                    android:gravity="center"
                                    android:textStyle="bold"
                                    android:textSize="@dimen/_15sdp">
                                </TextView>
                        </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    style="@style/RigtSide"
                    app:cardBackgroundColor="#F9A825"
                    app:cardElevation="10dp"
                    app:cardMaxElevation="10dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:weightSum="4"
                            android:gravity="center"
                            android:orientation="vertical">
                                <ImageView
                                    android:id="@+id/business"
                                    android:layout_weight="4"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="@dimen/_20sdp"
                                    android:scaleType="centerCrop"
                                    android:src="@drawable/busin_icon" />
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0.5"
                                    android:text="@string/business"
                                    android:gravity="center"
                                    android:textStyle="bold"
                                    android:textSize="@dimen/_15sdp">
                                </TextView>
                        </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
        </LinearLayout>
</LinearLayout>